@@ -45,6 +45,8 @@ VERSION 4.1.6
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -------------------------------------------------------------------------------------------
++$pgv_lang["SHOW_LIST_PLACES"]						11 Sep 2008				A
++$pgv_lang["SHOW_LIST_PLACES_help"]					11 Sep 2008				A
 -$PGV_LANG["NAME_FROM_GEDCOM"]						28 Aug 2008				Configuration option removed
 -$PGV_LANG["NAME_FROM_GEDCOM_help"]					28 Aug 2008
 *$pgv_lang["SHOW_EST_LIST_DATES_help"]				06 Aug 2008				W added "and charts"
